@@ -6,6 +6,8 @@ examples/create_and_print_value_property.pl
 examples/create_and_print_value_quantity.pl
 examples/create_and_print_value_quantity_translated.pl
 examples/create_and_print_value_string.pl
+examples/create_and_print_value_time.pl
+examples/create_and_print_value_time_translated.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
