@@ -1,6 +1,7 @@
 0.04
  - Add doc for Wikibase::Datatype::Print::Value::Quantity.
  - Add doc for Wikibase::Datatype::Print::Value::String.
+ - Add doc for Wikibase::Datatype::Print::Value::Time.
  - Add test for Wikibase::Datatype::Print::Value::Quantity.
  - Fix default options in Wikibase::Datatype::Print::Value::Quantity.
  - Fix default options in Wikibase::Datatype::Print::Value::Time.
